tests/snapshots/integration__mainfn_test__with_main_and_subcmds.snap
---
source: tests/mainfn_test.rs
assertion_line: 38
expression: output

---
RUN
prog -h

STDOUT
exit 1

STDERR
prog 

USAGE:
    prog [OPTIONS] [SUBCOMMAND]

OPTIONS:
        --foo     
    -h, --help    Print help information

SUBCOMMANDS:
    cmd     
    help    Print this message or the help of the given subcommand(s)


