tests/snapshots/integration__mainfn_test__without_main_but_with_subcmds.snap
---
source: tests/mainfn_test.rs
assertion_line: 54
expression: output

---
RUN
prog

STDOUT
exit 1

STDERR
error: 'prog' requires a subcommand but one was not provided

USAGE:
    prog [OPTIONS] <SUBCOMMAND>

For more information try --help


