tests/snapshots/integration__mainfn_test__without_main_but_with_subcmds2.snap
---
source: tests/mainfn_test.rs
assertion_line: 66
expression: output

---
RUN
prog -h

STDOUT


STDERR
prog 

USAGE:
    prog [OPTIONS] <SUBCOMMAND>

OPTIONS:
        --foo     
    -h, --help    Print help information

SUBCOMMANDS:
    cmd     
    help    Print this message or the help of the given subcommand(s)


